compiler/testData/asJava/lightClasses/compilationErrors/ExpectObject.kt
// p.B
// FIR_COMPARISON

package p

expect object B